--- a/templates/admin.html
+++ b/templates/admin.html
@@ -66,7 +66,7 @@
                                             <img src="{{ url_for('static', filename='/images/IU bball logo.jpeg') }}" height="30" width="30" alt="PDF-icon">
                                             <div id="filename"></div>
                                             <div id="filesize"></div>
-                                            <div  class="left"><img src="{{ url_for('static', filename='/images/X-icon.png') }}" height="20" width="20" alt="X-icon"></div>
+                                            <div  class="left"><img src="{{ url_for('static', filename='images/X-icon.png') }}" height="20" width="20" alt="X-icon"></div>
                                         </div>
                                         <div id="fileprogress"></div>
                                     </div>
