--- a/templates/integrations.html
+++ b/templates/integrations.html
@@ -42,7 +42,7 @@
     <div class="code-container">
         <pre><code id="chatbot-code" class="language-javascript">
             &lt;img id="b" src="http://127.0.0.1:5000//static/images/{{ settings.widget_icon }}" alt="Chat" style="width: 80px; height: 80px; position: fixed; bottom: 10px; right: 10px; z-index: 1000; cursor: pointer; transition: transform 0.3s ease-in-out;"&gt;
-            &lt;div id="p" style="display:block;position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);"&gt;Welcome! How can I help you today?&lt;/div&gt;
+            &lt;div id="p" style="display:block;position:fixed;bottom:100px;right:15px;z-index:10000;background:#fff;border:1px solid #ccc;padding:10px;border-radius:5px;box-shadow:0 0 10px rgba(0,0,0,.1);"&gt;{{ settings.popup_message }}&lt;/div&gt;
             &lt;span id="c" style="display:none;position:fixed;bottom:128px;right:10px;z-index:10001;cursor:pointer;padding:2px 6px;border-radius:10px;background-color:#dadada;font-family: arial;color: #4e4e4e;"&gt;x&lt;/span&gt;
             &lt;iframe src="http://127.0.0.1:5000/{{ user_id }}/{{ chatbot_id }}" id="e" frameborder="0" scrolling="no" width="400" height="700" style="display: none; position:fixed; bottom:80px; right:0; z-index:9999;"&gt;&lt;/iframe&gt;
             &lt;script&gt;
