--- a/static/css/analytics.css
+++ b/static/css/analytics.css
@@ -14,6 +14,10 @@ html, body {
     font-size: 40px;
   }
   
+h3 {
+    font-family: Arial, sans-serif;
+  }
+
   .company-name {
     margin-right: 10px;
     font-family: Arial, sans-serif; 
